# Lasp

./: .gitattributes  .gitignore  LICENSE.txt  Lasp.unitypackage  README.md  package.json
.github/workflows/: main.yml
Assets/: DeviceSelector.unity  LevelMeter.unity  Lissajous.unity  Spectrum.unity  SpectrumAnalyzer.unity  Sphere.unity  Test.unity  Tester.cs
Assets/Editor/: PackageTool.cs
Assets/Lasp/: AudioInput.cs  Lasp.cs  LaspInput.cs  LaspStream.cs  LaspUpdater.cs  PluginEntry.cs
Assets/Lasp/Editor/: AudioLevelMonitorEditor.cs
Assets/Lasp/Internal/: FilterBlock.cs  LaspStream.cs  LaspTerminator.cs  PluginEntry.cs
Assets/Lasp/Internal/macOS/AudioPluginLaspLoopback.bundle/Contents/: Info.plist
Assets/Lasp/Internal/macOS/AudioPluginLaspLoopback.bundle/Contents/MacOS/: Lasp
Assets/Lasp/Internal/macOS/Lasp.bundle/Contents/MacOS/: Lasp
Assets/Lasp/Plugin/MacOS/Lasp.bundle/Contents/: Info.plist
Assets/Lasp/Runtime/: AudioLevelTracker.cs  Lasp.asmdef  LaspCommon.cs
Assets/Lasp/Runtime/Internal/: LaspStream.cs  LaspTerminator.cs  PluginEntry.cs
Assets/Lasp/Runtime/Internal/macOS/Lasp.bundle/Contents/MacOS/: Lasp
Assets/Test/: DeviceList.cs  DeviceSelector.cs  FftTest.unity  FftTester.cs  Line.mat  LissajousRenderer.cs  Loopback.mixer  ParticleController.cs  Particles.unity  Puff.mat  Puff.psd  Spectrum1024.renderTexture  SpectrumColor.mat  SpectrumColor.shader  SpectrumGraph.cs  Test.unity  Tester.cs  Unlit.mat  WaveformRenderer.cs
Editor/: LevelMonitorEditor.cs
Plugin/KissFft/: _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  kissfft.hh
Plugin/Linux/: CMakeLists.txt  build.sh
Plugin/Source/: AudioPluginInterface.h  BiquadFilter.h  Debug.h  Driver.h  IUnityInterface.h  Lasp.cpp  LoopbackEffect.cpp  RingBuffer.h  dllmain.cpp  stdafx.cpp  stdafx.h
Plugin/VisualStudio/: Lasp.def  Lasp.sln  Lasp.vcxproj  Lasp.vcxproj.filters  dllmain.cpp
Plugin/Xcode/: Info.plist
Plugin/Xcode/Lasp.xcodeproj/: project.pbxproj
Plugin/Xcode/Lasp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ProjectSettings/: AudioManager.asset  EditorBuildSettings.asset  EditorSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset  VFXManager.asset
Runtime/: AudioLevelTracker.cs  MasterInput.cs
Runtime/Internal/: FilterBlock.cs  PluginEntry.cs
