CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(ENABLE_DEBUG ON)
ENDIF()

SET(LASP_INCLUDES
    ../Source/AudioPluginInterface.h
    ../Source/BiquadFilter.h
    ../Source/Debug.h
    ../Source/Driver.h
    ../Source/IUnityInterface.h
    ../Source/RingBuffer.h
)

SET(LASP_SOURCES
    ../Source/Lasp.cpp
    ../Source/LoopbackEffect.cpp
)

SET(CMAKE_CXX_STANDARD 11)
SET(LASP_LIBRARY_DEPENDENCIES m)

IF(ENABLE_DEBUG)
    SET(LASP_COMPILE_DEFINITIONS _DEBUG)
ENDIF()

ADD_LIBRARY(Lasp SHARED ${LASP_INCLUDES} ${LASP_SOURCES})
SET_PROPERTY(TARGET Lasp APPEND_STRING PROPERTY COMPILE_DEFINITIONS ${LASP_COMPILE_DEFINITIONS})
TARGET_INCLUDE_DIRECTORIES(Lasp PRIVATE ${LASP_INCLUDE_PATHS})
TARGET_LINK_LIBRARIES(Lasp ${LASP_LIBRARY_DEPENDENCIES})
